fix(component:flex): fix gap calculation error when nested

--- a/packages/comz-style/src/components/flex.scss
+++ b/packages/comz-style/src/components/flex.scss
@@ -17,8 +17,7 @@ $justify: var(--cflex-justify, flex-start);
   justify-content: $justify;
   align-items: $align;
   gap: $gap;
-  width: 100%;
-
+  
   & > * {
     flex: none;
   }
@@ -26,7 +25,6 @@ $justify: var(--cflex-justify, flex-start);
 
 %flex--inline {
   display: inline-flex;
-  width: unset;
 }
 
 %flex--wrap {
